# fastapi-mkdocs-material

./: .gitignore  README.md  pyproject.toml
src/: main.py
tech-docs/: index.html
tech-docs/tutorials/: page.html
templates/: index.html
