[tool.poetry]
name = "fastapi-mkdocs-material"
version = "0.1.0"
description = ""
authors = ["Jon Whittlestone <dev@howapped.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.5"
mkdocs-material-extensions = "^1.0.3"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
